kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bucket-webhook
  name: bucket-webhook
spec:
  selector:
    app: bucket-webhook
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 9000
